
v0.3
	- textures on sides
	- asphalt texture
	- different friction at different track segments

v0.2
	- check curb heights
	- add bankings
	- add pits

v0.1
  - initial release
	- correct height
	- correct barrier placement
	- correct side widths
	- correct curb placement
	- correct length
	