@@ -1,7 +1,5 @@
 TODO
 
-v0.3
-- custom curbs
 v0.4
 - add race-selection picture
 - add turnmarks
