@@ -1,5 +1,6 @@
 
 v0.3
+	- custom curbs
 	- textures on sides
 	- asphalt texture
 	- different friction at different track segments
